gccida/g1/expand_expr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6494:41: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_expr( tree exp, rtx target, machine_mode tmode, expand_modifier modifier) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6494:61: error: must use 'enum' tag to refer to type 'expand_modifier'
rtx  expand_expr( tree exp, rtx target, machine_mode tmode, expand_modifier modifier) 
                                                            ^
                                                            enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6496:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6506:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6507:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6527:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6527:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6528:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6528:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6530:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6530:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6532:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6532:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6533:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6533:5: error: use of undeclared identifier 'v41'
rtx v41; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6534:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6534:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/expr.c:6536:4: error: expected ';' after expression
rtx rtl; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_expr/src/obj/expr.o] Error 1
